python/versioned_docs/version-1.22/test-assertions.mdx
---
id: test-assertions
title: "Assertions"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Playwright gives you Web-First Assertions with convenience methods for creating assertions that will wait and retry until the expected condition is met.

Consider the following example:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import Page, expect

def test_status_becomes_submitted(page: Page) -> None:
    # ..
    page.click("#submit-button")
    expect(page.locator(".status")).to_have_text("Submitted")
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import Page, expect

async def test_status_becomes_submitted(page: Page) -> None:
    # ..
    await page.click("#submit-button")
    await expect(page.locator(".status")).to_have_text("Submitted")
```

</TabItem>
</Tabs>

Playwright will be re-testing the node with the selector `.status` until fetched Node has the `"Submitted"` text. It will be re-fetching the node and checking it over and over, until the condition is met or until the timeout is reached. You can pass this timeout as an option.

By default, the timeout for assertions is set to 5 seconds.
- [expect(locator).not_to_be_checked(**kwargs)](./test-assertions.mdx#locator-assertions-not-to-be-checked)
- [expect(locator).not_to_be_disabled(**kwargs)](./test-assertions.mdx#locator-assertions-not-to-be-disabled)
- [expect(locator).not_to_be_editable(**kwargs)](./test-assertions.mdx#locator-assertions-not-to-be-editable)
- [expect(locator).not_to_be_empty(**kwargs)](./test-assertions.mdx#locator-assertions-not-to-be-empty)
- [expect(locator).not_to_be_enabled(**kwargs)](./test-assertions.mdx#locator-assertions-not-to-be-enabled)
- [expect(locator).not_to_be_focused(**kwargs)](./test-assertions.mdx#locator-assertions-not-to-be-focused)
- [expect(locator).not_to_be_hidden(**kwargs)](./test-assertions.mdx#locator-assertions-not-to-be-hidden)
- [expect(locator).not_to_be_visible(**kwargs)](./test-assertions.mdx#locator-assertions-not-to-be-visible)
- [expect(locator).not_to_contain_text(expected, **kwargs)](./test-assertions.mdx#locator-assertions-not-to-contain-text)
- [expect(locator).not_to_have_attribute(name, value, **kwargs)](./test-assertions.mdx#locator-assertions-not-to-have-attribute)
- [expect(locator).not_to_have_class(expected, **kwargs)](./test-assertions.mdx#locator-assertions-not-to-have-class)
- [expect(locator).not_to_have_count(count, **kwargs)](./test-assertions.mdx#locator-assertions-not-to-have-count)
- [expect(locator).not_to_have_css(name, value, **kwargs)](./test-assertions.mdx#locator-assertions-not-to-have-css)
- [expect(locator).not_to_have_id(id, **kwargs)](./test-assertions.mdx#locator-assertions-not-to-have-id)
- [expect(locator).not_to_have_js_property(name, value, **kwargs)](./test-assertions.mdx#locator-assertions-not-to-have-js-property)
- [expect(locator).not_to_have_text(expected, **kwargs)](./test-assertions.mdx#locator-assertions-not-to-have-text)
- [expect(locator).not_to_have_value(value, **kwargs)](./test-assertions.mdx#locator-assertions-not-to-have-value)
- [expect(locator).to_be_checked(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-checked)
- [expect(locator).to_be_disabled(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-disabled)
- [expect(locator).to_be_editable(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-editable)
- [expect(locator).to_be_empty(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-empty)
- [expect(locator).to_be_enabled(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-enabled)
- [expect(locator).to_be_focused(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-focused)
- [expect(locator).to_be_hidden(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-hidden)
- [expect(locator).to_be_visible(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-visible)
- [expect(locator).to_contain_text(expected, **kwargs)](./test-assertions.mdx#locator-assertions-to-contain-text)
- [expect(locator).to_have_attribute(name, value, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-attribute)
- [expect(locator).to_have_class(expected, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-class)
- [expect(locator).to_have_count(count, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-count)
- [expect(locator).to_have_css(name, value, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-css)
- [expect(locator).to_have_id(id, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-id)
- [expect(locator).to_have_js_property(name, value, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-js-property)
- [expect(locator).to_have_text(expected, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-text)
- [expect(locator).to_have_value(value, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-value)
- [expect(page).not_to_have_title(title_or_reg_exp, **kwargs)](./test-assertions.mdx#page-assertions-not-to-have-title)
- [expect(page).not_to_have_url(url_or_reg_exp, **kwargs)](./test-assertions.mdx#page-assertions-not-to-have-url)
- [expect(page).to_have_title(title_or_reg_exp, **kwargs)](./test-assertions.mdx#page-assertions-to-have-title)
- [expect(page).to_have_url(url_or_reg_exp, **kwargs)](./test-assertions.mdx#page-assertions-to-have-url)
- [expect(api_response).not_to_be_ok()](./test-assertions.mdx#api-response-assertions-not-to-be-ok)
- [expect(api_response).to_be_ok()](./test-assertions.mdx#api-response-assertions-to-be-ok)

## expect(locator).not_to_be_checked(**kwargs) {#locator-assertions-not-to-be-checked}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-checked-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-checked-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-checked-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-checked-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_be_checked(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-checked).

## expect(locator).not_to_be_disabled(**kwargs) {#locator-assertions-not-to-be-disabled}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-disabled-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-disabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-disabled-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-disabled-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_be_disabled(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-disabled).

## expect(locator).not_to_be_editable(**kwargs) {#locator-assertions-not-to-be-editable}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-editable-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-editable-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-editable-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-editable-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_be_editable(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-editable).

## expect(locator).not_to_be_empty(**kwargs) {#locator-assertions-not-to-be-empty}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-empty-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-empty-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-empty-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-empty-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_be_empty(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-empty).

## expect(locator).not_to_be_enabled(**kwargs) {#locator-assertions-not-to-be-enabled}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-enabled-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-enabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-enabled-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-enabled-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_be_enabled(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-enabled).

## expect(locator).not_to_be_focused(**kwargs) {#locator-assertions-not-to-be-focused}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-focused-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-focused-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-focused-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-focused-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_be_focused(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-focused).

## expect(locator).not_to_be_hidden(**kwargs) {#locator-assertions-not-to-be-hidden}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-hidden-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-hidden-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-hidden-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-hidden-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_be_hidden(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-hidden).

## expect(locator).not_to_be_visible(**kwargs) {#locator-assertions-not-to-be-visible}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-visible-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-be-visible-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-be-visible-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-be-visible-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_be_visible(**kwargs)](./test-assertions.mdx#locator-assertions-to-be-visible).

## expect(locator).not_to_contain_text(expected, **kwargs) {#locator-assertions-not-to-contain-text}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-contain-text-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]|[Pattern]\]&#62; Expected substring or RegExp or a list of those.<a href="#locator-assertions-not-to-contain-text-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-contain-text-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-contain-text-option-timeout" class="list-anchor">#</a>
- `use_inner_text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-contain-text-option-use-inner-text"/> &#60;[bool]&#62; Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.<a href="#locator-assertions-not-to-contain-text-option-use-inner-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-contain-text-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-contain-text-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_contain_text(expected, **kwargs)](./test-assertions.mdx#locator-assertions-to-contain-text).

## expect(locator).not_to_have_attribute(name, value, **kwargs) {#locator-assertions-not-to-have-attribute}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-attribute-option-name"/> &#60;[str]&#62; Attribute name.<a href="#locator-assertions-not-to-have-attribute-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-attribute-option-value"/> &#60;[str]|[Pattern]&#62; Expected attribute value.<a href="#locator-assertions-not-to-have-attribute-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-attribute-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-attribute-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-attribute-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-attribute-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_have_attribute(name, value, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-attribute).

## expect(locator).not_to_have_class(expected, **kwargs) {#locator-assertions-not-to-have-class}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-class-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]|[Pattern]\]&#62; Expected class or RegExp or a list of those.<a href="#locator-assertions-not-to-have-class-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-class-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-class-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-class-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-class-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_have_class(expected, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-class).

## expect(locator).not_to_have_count(count, **kwargs) {#locator-assertions-not-to-have-count}
- `count`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-count-option-count"/> &#60;[int]&#62; Expected count.<a href="#locator-assertions-not-to-have-count-option-count" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-count-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-count-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-count-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-count-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_have_count(count, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-count).

## expect(locator).not_to_have_css(name, value, **kwargs) {#locator-assertions-not-to-have-css}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-css-option-name"/> &#60;[str]&#62; CSS property name.<a href="#locator-assertions-not-to-have-css-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-css-option-value"/> &#60;[str]|[Pattern]&#62; CSS property value.<a href="#locator-assertions-not-to-have-css-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-css-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-css-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-css-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-css-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_have_css(name, value, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-css).

## expect(locator).not_to_have_id(id, **kwargs) {#locator-assertions-not-to-have-id}
- `id`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-id-option-id"/> &#60;[str]|[Pattern]&#62; Element id.<a href="#locator-assertions-not-to-have-id-option-id" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-id-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-id-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-id-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-id-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_have_id(id, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-id).

## expect(locator).not_to_have_js_property(name, value, **kwargs) {#locator-assertions-not-to-have-js-property}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-js-property-option-name"/> &#60;[str]&#62; Property name.<a href="#locator-assertions-not-to-have-js-property-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-js-property-option-value"/> &#60;[Any]&#62; Property value.<a href="#locator-assertions-not-to-have-js-property-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-js-property-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-js-property-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-js-property-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-js-property-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_have_js_property(name, value, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-js-property).

## expect(locator).not_to_have_text(expected, **kwargs) {#locator-assertions-not-to-have-text}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-text-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]|[Pattern]\]&#62; Expected substring or RegExp or a list of those.<a href="#locator-assertions-not-to-have-text-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-text-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-text-option-timeout" class="list-anchor">#</a>
- `use_inner_text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-text-option-use-inner-text"/> &#60;[bool]&#62; Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.<a href="#locator-assertions-not-to-have-text-option-use-inner-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-text-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-text-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_have_text(expected, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-text).

## expect(locator).not_to_have_value(value, **kwargs) {#locator-assertions-not-to-have-value}
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-value-option-value"/> &#60;[str]|[Pattern]&#62; Expected value.<a href="#locator-assertions-not-to-have-value-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-value-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-not-to-have-value-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-not-to-have-value-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-not-to-have-value-return" class="list-anchor">#</a>

The opposite of [expect(locator).to_have_value(value, **kwargs)](./test-assertions.mdx#locator-assertions-to-have-value).

## expect(locator).to_be_checked(**kwargs) {#locator-assertions-to-be-checked}
- `checked`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-checked-option-checked"/> &#60;[bool]&#62;<a href="#locator-assertions-to-be-checked-option-checked" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-checked-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-checked-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-checked-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-checked-return" class="list-anchor">#</a>

Ensures the [Locator] points to a checked input.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator(".subscribe")
expect(locator).to_be_checked()
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator(".subscribe")
await expect(locator).to_be_checked()
```

</TabItem>
</Tabs>

## expect(locator).to_be_disabled(**kwargs) {#locator-assertions-to-be-disabled}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-disabled-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-disabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-disabled-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-disabled-return" class="list-anchor">#</a>

Ensures the [Locator] points to a disabled element. Element is disabled if it has "disabled" attribute or is disabled via ['aria-disabled'](https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-disabled). Note that only native control elements such as HTML `button`, `input`, `select`, `textarea`, `option`, `optgroup` can be disabled by setting "disabled" attribute. "disabled" attribute on other elements is ignored by the browser.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator("button.submit")
expect(locator).to_be_disabled()
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator("button.submit")
await expect(locator).to_be_disabled()
```

</TabItem>
</Tabs>

## expect(locator).to_be_editable(**kwargs) {#locator-assertions-to-be-editable}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-editable-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-editable-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-editable-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-editable-return" class="list-anchor">#</a>

Ensures the [Locator] points to an editable element.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator(".input")
expect(locator).to_be_editable()
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator(".input")
await expect(locator).to_be_editable()
```

</TabItem>
</Tabs>

## expect(locator).to_be_empty(**kwargs) {#locator-assertions-to-be-empty}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-empty-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-empty-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-empty-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-empty-return" class="list-anchor">#</a>

Ensures the [Locator] points to an empty editable element or to a DOM node that has no text.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator("div.warning")
expect(locator).to_be_empty()
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator("div.warning")
await expect(locator).to_be_empty()
```

</TabItem>
</Tabs>

## expect(locator).to_be_enabled(**kwargs) {#locator-assertions-to-be-enabled}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-enabled-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-enabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-enabled-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-enabled-return" class="list-anchor">#</a>

Ensures the [Locator] points to an enabled element.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator("button.submit")
expect(locator).to_be_enabled()
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator("button.submit")
await expect(locator).to_be_enabled()
```

</TabItem>
</Tabs>

## expect(locator).to_be_focused(**kwargs) {#locator-assertions-to-be-focused}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-focused-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-focused-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-focused-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-focused-return" class="list-anchor">#</a>

Ensures the [Locator] points to a focused DOM node.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator('input')
expect(locator).to_be_focused()
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator('input')
await expect(locator).to_be_focused()
```

</TabItem>
</Tabs>

## expect(locator).to_be_hidden(**kwargs) {#locator-assertions-to-be-hidden}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-hidden-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-hidden-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-hidden-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-hidden-return" class="list-anchor">#</a>

Ensures the [Locator] points to a hidden DOM node, which is the opposite of [visible](./actionability.mdx#visible).

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator('.my-element')
expect(locator).to_be_hidden()
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator('.my-element')
await expect(locator).to_be_hidden()
```

</TabItem>
</Tabs>

## expect(locator).to_be_visible(**kwargs) {#locator-assertions-to-be-visible}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-visible-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-be-visible-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-be-visible-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-be-visible-return" class="list-anchor">#</a>

Ensures the [Locator] points to a [visible](./actionability.mdx#visible) DOM node.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator('.my-element')
expect(locator).to_be_visible()
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator('.my-element')
await expect(locator).to_be_visible()
```

</TabItem>
</Tabs>

## expect(locator).to_contain_text(expected, **kwargs) {#locator-assertions-to-contain-text}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]|[Pattern]\]&#62; Expected substring or RegExp or a list of those.<a href="#locator-assertions-to-contain-text-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-contain-text-option-timeout" class="list-anchor">#</a>
- `use_inner_text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-option-use-inner-text"/> &#60;[bool]&#62; Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.<a href="#locator-assertions-to-contain-text-option-use-inner-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-contain-text-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-contain-text-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element that contains the given text. You can use regular expressions for the value as well.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
import re
from playwright.sync_api import expect

locator = page.locator('.title')
expect(locator).to_contain_text("substring")
expect(locator).to_contain_text(re.compile(r"\d messages"))
```

</TabItem>
<TabItem value="async">

```py
import re
from playwright.async_api import expect

locator = page.locator('.title')
await expect(locator).to_contain_text("substring")
await expect(locator).to_contain_text(re.compile(r"\d messages"))
```

</TabItem>
</Tabs>

Note that if array is passed as an expected value, entire lists of elements can be asserted:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
import re
from playwright.sync_api import expect

locator = page.locator("list > .list-item")
expect(locator).to_contain_text(["Text 1", "Text 4", "Text 5"])
```

</TabItem>
<TabItem value="async">

```py
import re
from playwright.async_api import expect

locator = page.locator("list > .list-item")
await expect(locator).to_contain_text(["Text 1", "Text 4", "Text 5"])
```

</TabItem>
</Tabs>

## expect(locator).to_have_attribute(name, value, **kwargs) {#locator-assertions-to-have-attribute}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-option-name"/> &#60;[str]&#62; Attribute name.<a href="#locator-assertions-to-have-attribute-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-option-value"/> &#60;[str]|[Pattern]&#62; Expected attribute value.<a href="#locator-assertions-to-have-attribute-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-attribute-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-attribute-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-attribute-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with given attribute.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator("input")
expect(locator).to_have_attribute("type", "text")
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator("input")
await expect(locator).to_have_attribute("type", "text")
```

</TabItem>
</Tabs>

## expect(locator).to_have_class(expected, **kwargs) {#locator-assertions-to-have-class}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-class-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]|[Pattern]\]&#62; Expected class or RegExp or a list of those.<a href="#locator-assertions-to-have-class-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-class-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-class-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-class-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-class-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with given CSS class.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator("#component")
expect(locator).to_have_class(re.compile(r"selected"))
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator("#component")
await expect(locator).to_have_class(re.compile(r"selected"))
```

</TabItem>
</Tabs>

Note that if array is passed as an expected value, entire lists of elements can be asserted:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator("list > .component")
expect(locator).to_have_class(["component", "component selected", "component"])
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator("list > .component")
await expect(locator).to_have_class(["component", "component selected", "component"])
```

</TabItem>
</Tabs>

## expect(locator).to_have_count(count, **kwargs) {#locator-assertions-to-have-count}
- `count`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-count-option-count"/> &#60;[int]&#62; Expected count.<a href="#locator-assertions-to-have-count-option-count" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-count-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-count-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-count-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-count-return" class="list-anchor">#</a>

Ensures the [Locator] resolves to an exact number of DOM nodes.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator("list > .component")
expect(locator).to_have_count(3)
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator("list > .component")
await expect(locator).to_have_count(3)
```

</TabItem>
</Tabs>

## expect(locator).to_have_css(name, value, **kwargs) {#locator-assertions-to-have-css}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-option-name"/> &#60;[str]&#62; CSS property name.<a href="#locator-assertions-to-have-css-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-option-value"/> &#60;[str]|[Pattern]&#62; CSS property value.<a href="#locator-assertions-to-have-css-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-css-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-css-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-css-return" class="list-anchor">#</a>

Ensures the [Locator] resolves to an element with the given computed CSS style.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator("button")
expect(locator).to_have_css("display", "flex")
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator("button")
await expect(locator).to_have_css("display", "flex")
```

</TabItem>
</Tabs>

## expect(locator).to_have_id(id, **kwargs) {#locator-assertions-to-have-id}
- `id`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-id-option-id"/> &#60;[str]|[Pattern]&#62; Element id.<a href="#locator-assertions-to-have-id-option-id" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-id-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-id-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-id-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-id-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with the given DOM Node ID.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator("input")
expect(locator).to_have_id("lastname")
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator("input")
await expect(locator).to_have_id("lastname")
```

</TabItem>
</Tabs>

## expect(locator).to_have_js_property(name, value, **kwargs) {#locator-assertions-to-have-js-property}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-option-name"/> &#60;[str]&#62; Property name.<a href="#locator-assertions-to-have-js-property-option-name" class="list-anchor">#</a>
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-option-value"/> &#60;[Any]&#62; Property value.<a href="#locator-assertions-to-have-js-property-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-js-property-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-js-property-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-js-property-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with given JavaScript property. Note that this property can be of a primitive type as well as a plain serializable JavaScript object.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator(".component")
expect(locator).to_have_js_property("loaded", True)
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator(".component")
await expect(locator).to_have_js_property("loaded", True)
```

</TabItem>
</Tabs>

## expect(locator).to_have_text(expected, **kwargs) {#locator-assertions-to-have-text}
- `expected`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-option-expected"/> &#60;[str]|[Pattern]|[List]\[[str]|[Pattern]\]&#62; Expected substring or RegExp or a list of those.<a href="#locator-assertions-to-have-text-option-expected" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-text-option-timeout" class="list-anchor">#</a>
- `use_inner_text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-option-use-inner-text"/> &#60;[bool]&#62; Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.<a href="#locator-assertions-to-have-text-option-use-inner-text" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-text-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-text-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with the given text. You can use regular expressions for the value as well.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
import re
from playwright.sync_api import expect

locator = page.locator(".title")
expect(locator).to_have_text(re.compile(r"Welcome, Test User"))
expect(locator).to_have_text(re.compile(r"Welcome, .*"))
```

</TabItem>
<TabItem value="async">

```py
import re
from playwright.async_api import expect

locator = page.locator(".title")
await expect(locator).to_have_text(re.compile(r"Welcome, Test User"))
await expect(locator).to_have_text(re.compile(r"Welcome, .*"))
```

</TabItem>
</Tabs>

Note that if array is passed as an expected value, entire lists of elements can be asserted:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import expect

locator = page.locator("list > .component")
expect(locator).to_have_text(["Text 1", "Text 2", "Text 3"])
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

locator = page.locator("list > .component")
await expect(locator).to_have_text(["Text 1", "Text 2", "Text 3"])
```

</TabItem>
</Tabs>

## expect(locator).to_have_value(value, **kwargs) {#locator-assertions-to-have-value}
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-value-option-value"/> &#60;[str]|[Pattern]&#62; Expected value.<a href="#locator-assertions-to-have-value-option-value" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-value-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#locator-assertions-to-have-value-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-assertions-to-have-value-return"/> &#60;[NoneType]&#62;<a href="#locator-assertions-to-have-value-return" class="list-anchor">#</a>

Ensures the [Locator] points to an element with the given input value. You can use regular expressions for the value as well.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
import re
from playwright.sync_api import expect

locator = page.locator("input[type=number]")
expect(locator).to_have_value(re.compile(r"[0-9]"))
```

</TabItem>
<TabItem value="async">

```py
import re
from playwright.async_api import expect

locator = page.locator("input[type=number]")
await expect(locator).to_have_value(re.compile(r"[0-9]"))
```

</TabItem>
</Tabs>

## expect(page).not_to_have_title(title_or_reg_exp, **kwargs) {#page-assertions-not-to-have-title}
- `title_or_reg_exp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-title-option-title-or-reg-exp"/> &#60;[str]|[Pattern]&#62; Expected title or RegExp.<a href="#page-assertions-not-to-have-title-option-title-or-reg-exp" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-title-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#page-assertions-not-to-have-title-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-title-return"/> &#60;[NoneType]&#62;<a href="#page-assertions-not-to-have-title-return" class="list-anchor">#</a>

The opposite of [expect(page).to_have_title(title_or_reg_exp, **kwargs)](./test-assertions.mdx#page-assertions-to-have-title).

## expect(page).not_to_have_url(url_or_reg_exp, **kwargs) {#page-assertions-not-to-have-url}
- `url_or_reg_exp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-url-option-url-or-reg-exp"/> &#60;[str]|[Pattern]&#62; Expected substring or RegExp.<a href="#page-assertions-not-to-have-url-option-url-or-reg-exp" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-url-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#page-assertions-not-to-have-url-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-not-to-have-url-return"/> &#60;[NoneType]&#62;<a href="#page-assertions-not-to-have-url-return" class="list-anchor">#</a>

The opposite of [expect(page).to_have_url(url_or_reg_exp, **kwargs)](./test-assertions.mdx#page-assertions-to-have-url).

## expect(page).to_have_title(title_or_reg_exp, **kwargs) {#page-assertions-to-have-title}
- `title_or_reg_exp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-title-option-title-or-reg-exp"/> &#60;[str]|[Pattern]&#62; Expected title or RegExp.<a href="#page-assertions-to-have-title-option-title-or-reg-exp" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-title-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#page-assertions-to-have-title-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-title-return"/> &#60;[NoneType]&#62;<a href="#page-assertions-to-have-title-return" class="list-anchor">#</a>

Ensures the page has the given title.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
import re
from playwright.sync_api import expect

# ...
expect(page).to_have_title(re.compile(r".*checkout"))
```

</TabItem>
<TabItem value="async">

```py
import re
from playwright.async_api import expect

# ...
await expect(page).to_have_title(re.compile(r".*checkout"))
```

</TabItem>
</Tabs>

## expect(page).to_have_url(url_or_reg_exp, **kwargs) {#page-assertions-to-have-url}
- `url_or_reg_exp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-url-option-url-or-reg-exp"/> &#60;[str]|[Pattern]&#62; Expected substring or RegExp.<a href="#page-assertions-to-have-url-option-url-or-reg-exp" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-url-option-timeout"/> &#60;[float]&#62; Time to retry the assertion for.<a href="#page-assertions-to-have-url-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="page-assertions-to-have-url-return"/> &#60;[NoneType]&#62;<a href="#page-assertions-to-have-url-return" class="list-anchor">#</a>

Ensures the page is navigated to the given URL.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
import re
from playwright.sync_api import expect

# ...
expect(page).to_have_url(re.compile(".*checkout"))
```

</TabItem>
<TabItem value="async">

```py
import re
from playwright.async_api import expect

# ...
await expect(page).to_have_url(re.compile(".*checkout"))
```

</TabItem>
</Tabs>

## expect(api_response).not_to_be_ok() {#api-response-assertions-not-to-be-ok}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-response-assertions-not-to-be-ok-return"/> &#60;[NoneType]&#62;<a href="#api-response-assertions-not-to-be-ok-return" class="list-anchor">#</a>

The opposite of [expect(api_response).to_be_ok()](./test-assertions.mdx#api-response-assertions-to-be-ok).

## expect(api_response).to_be_ok() {#api-response-assertions-to-be-ok}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="api-response-assertions-to-be-ok-return"/> &#60;[NoneType]&#62;<a href="#api-response-assertions-to-be-ok-return" class="list-anchor">#</a>

Ensures the response status code is within [200..299] range.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
import re
from playwright.sync_api import expect

# ...
expect(response).to_be_ok()
```

</TabItem>
<TabItem value="async">

```py
from playwright.async_api import expect

# ...
await expect(response).to_be_ok()
```

</TabItem>
</Tabs>

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./test-assertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
